--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
