--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
+    "currency-to-words": "^0.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
